# prometheus_v2

./: .editorconfig  .env.example  .gitignore  CODING_STANDARDS.md  CODING_STANDARDS_COMPLIANCE_REPORT.md  CODING_STANDARDS_QUICK_REF.md  CODING_STANDARDS_README.md  EMBEDDING_MIGRATION_PLAN.md  EMBEDDING_WORLD_VISION.md  PHASE1_COMPLETE.md  PHASE2_HOWTO.md  PHASE2_READY.md  README.md  deploy_production.sh  pyproject.toml  start_prometheus.sh
configs/core/: base.yaml
configs/portfolio/: core_long_eq_daily.yaml
configs/universe/: core_long_eq_daily.yaml
deploy/systemd/: prometheus-execution.service  prometheus-execution.timer
docs/: DATA_FLOW_BACKTEST_TO_UI.md  IBKR_DEPLOYMENT.md  IBKR_INTEGRATION_SUMMARY.md  IBKR_QUICK_START.md  META_KRONOS_INTELLIGENCE.md  ORCHESTRATION_COMPLETE.md  PRODUCTION_DEPLOYMENT.md  README.md  UI_COMPLETION_SUMMARY.md  UI_QUICK_START.md  UI_USER_GUIDE.md
docs/architecture/: 00_overview.md  20_engines.md  30_database_schema.md  99_master_architecture.md  ARCHITECTURE_COMPLETE.md  README.md  visualization_3d.html
docs/guides/: README.md  backtesting_and_books_pipeline.md  encoders_joint_use_cases_plan.md  external_platform_patterns.md  pattern_discovery_principles.md
docs/math/: possible_candidates.md
docs/plans/: ITERATION_1_DETAILED.md  README.md  REGIME_STABILITY_COMPLETION_SUMMARY.md  REGIME_STABILITY_INTEGRATION_GUIDE.md  REVISED_PLANS_SUMMARY.md  STABILITY_REWRITE_PROGRESS.md  algorithms_landscape.md  assessment_engine_v2_plan.md  backtesting_engine_plan.md  black_swan_emergency_engine_plan.md  config_and_strategy_management_plan.md  data_ingestion_plan.md  documentation_standards.md  execution_plan.md  makro plan.md  (+8 more)
migrations/: env.py
prometheus/: __init__.py
prometheus_c2/: README.md  project.godot
prometheus_tui/: BRAILLE_CHARTS.md  DESIGN_27INCH.md  LAYOUT_IMPROVEMENTS.md  Makefile  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_PANELS_COMPLETE.md  README.md  SETUP.md  STATUS_REPORT.md  run.sh
scripts/: generate_stubs_from_plantuml.py  render_mermaid_docs.sh  render_plantuml.sh  run_phase2_embeddings.sh  setup_phase1_sleeves.py  view_diagrams.sh  watch_mermaid_docs.sh
tests/: test_architecture_validation.py
(+430 files in other folders)
